--- a/app/src/main/res/layout/fragment_statistics.xml
+++ b/app/src/main/res/layout/fragment_statistics.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -21,8 +21,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:clipToPadding="false"
-                android:paddingBottom="80dp"
-                android:paddingTop="72dp"
                 android:scrollbars="none" />
 
             <TextView
@@ -60,44 +58,75 @@
     </android.support.v4.view.ViewPager>
 
     <android.support.v7.widget.CardView
+        android:id="@+id/summaryView"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="12dp"
         android:layout_marginStart="12dp"
         android:layout_marginTop="8dp"
         custom:cardCornerRadius="2dp"
         custom:cardElevation="2dp">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_margin="16dp">
+            android:layout_margin="8dp"
+            android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/balanceLabel"
-                android:layout_width="wrap_content"
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentStart="true"
-                android:layout_alignParentTop="true"
-                android:gravity="center"
-                android:text="@string/statisticsBalanceLabel" />
+                android:layout_gravity="center"
+                android:orientation="horizontal">
 
-            <com.walletudo.ui.view.AmountView
-                android:id="@+id/balance"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/periodLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:gravity="center"
+                    android:text="@string/statisticsPeriodLabel" />
+
+                <com.walletudo.ui.view.PeriodView
+                    android:id="@+id/period"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:gravity="center" />
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentTop="true"
-                android:gravity="center" />
-        </RelativeLayout>
+                android:layout_gravity="center"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/balanceLabel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:gravity="center"
+                    android:text="@string/statisticsBalanceLabel" />
+
+                <com.walletudo.ui.view.AmountView
+                    android:id="@+id/balance"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:gravity="center" />
+            </RelativeLayout>
+
+        </LinearLayout>
     </android.support.v7.widget.CardView>
 
     <com.github.clans.fab.FloatingActionMenu
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
         android:layout_marginBottom="16dp"
         custom:menu_colorNormal="@color/theme_primary"
         custom:menu_colorPressed="@color/theme_primary_dark">
@@ -129,4 +158,4 @@
             android:src="@drawable/ic_fab_stats_main"
             custom:fab_label="Current week" />
     </com.github.clans.fab.FloatingActionMenu>
-</FrameLayout>
+</RelativeLayout>
