Fancy Cash Flow list view

--- a/app/src/main/res/layout/fragment_cash_flow_list.xml
+++ b/app/src/main/res/layout/fragment_cash_flow_list.xml
@@ -3,11 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ListView
+    <com.diegocarloslima.fgelv.lib.FloatingGroupExpandableListView
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:choiceMode="singleChoice"
-        android:divider="@color/listItemDivider"
-        android:dividerHeight="1px"/>
+        android:childDivider="@android:color/transparent"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:groupIndicator="@drawable/md_transparent" />
 </FrameLayout>
