--- a/app/src/main/res/layout/item_child_cash_flow_list.xml
+++ b/app/src/main/res/layout/item_child_cash_flow_list.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<com.walletudo.widget.CheckableFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/selector_list_item">
+    android:background="?android:attr/selectableItemBackground"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -14,27 +15,27 @@
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:textSize="@dimen/xSmallFontSize" />
-
-        <TextView
-            android:id="@+id/amount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
-            android:textSize="@dimen/xLargeFontSize" />
+            android:textSize="@dimen/xSmallFontSize" />
 
         <TextView
             android:id="@+id/wallet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
-            android:layout_below="@id/date"
-            android:layout_toStartOf="@id/amount"
+            android:layout_alignParentTop="true"
             android:textSize="@dimen/mediumFontSize"
             android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/amount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_below="@id/wallet"
+            android:layout_toStartOf="@id/date"
+            android:textSize="@dimen/xLargeFontSize" />
 
         <TextView
             android:id="@+id/tag"
@@ -42,7 +43,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_alignParentStart="true"
-            android:layout_below="@id/wallet" />
+            android:layout_below="@id/amount" />
 
         <TextView
             android:id="@+id/comment"
@@ -53,4 +54,4 @@
             android:layout_below="@id/tag"
             android:textSize="@dimen/smallFontSize" />
     </RelativeLayout>
-</com.walletudo.widget.CheckableFrameLayout>
+</LinearLayout>
